# rockai

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: dataset.ipynb
scripts/: config.yml  resnet18.py
src/drp/dataset/: dataset.py
src/drp/models/: backbone.py  resnet18.py
src/rockai/: provider.py
src/rockai/dataset/: config.py  dataset.py  memmap.py  sqlite_dataset.py
src/rockai/models/: resnet18.py
tests/: test_dataset.py  test_models.py  test_sqlite_dataset.py
