[build-system]

build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]

name = "rockai"
version = "0.0.1"

authors = [
  {name = "Jean-François Lecomte", email = "jean-francois.lecomte@ifpen.fr"},
]

description = "module drp utilisant iapytoo"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
